--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,18 @@ html,
 body {
   @apply h-full w-full font-roboto bg-background text-primary transition-[background-color,color] duration-300 ease-in-out;
 }
+
+.loader {
+  width: 50px;
+  height: 50px;
+  border: 6px solid #fff;
+  border-top-color: transparent;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
